--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<meta HTTP-EQUIV="REFRESH" content="0; url=http://localhost:4000/_site/index.html">
+---
+layout: default
+---
+
+<p>Index page</p>
+<div class="posts">
+    <ul>
+        {% for post in site.posts %}
+        <li> {{ post.date | date_to_string }} <a href="{{ post.url }}">{{ post.title }}</a> </li>
+        {% endfor %}
+    </ul>
+</div>
