--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
----
-layout: default
----
-
-<p>Index page</p>
-<div class="posts">
-    <ul>
-        {% for post in site.posts %}
-        <li> {{ post.date | date_to_string }} <a href="{{ post.url }}">{{ post.title }}</a> </li>
-        {% endfor %}
-    </ul>
-</div>
+<meta HTTP-EQUIV="REFRESH" content="0; url=/_site/index.html">
